Added search.php and 404.php template

--- a/style.css
+++ b/style.css
@@ -95,4 +95,14 @@ body {
     top: 0;
     width: 50%; /* 6 columns */
   }
+
+}
+@media screen and (min-width:768px){
+  .searchfour .form-group {
+    float: right;
+}
+}
+
+.pokemon img{
+  max-width:100%;
 }
